fix issue with clipped items in blog

--- a/src/components/Pages/BlogPage/Blog.css
+++ b/src/components/Pages/BlogPage/Blog.css
@@ -13,7 +13,7 @@
 .blog-list {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   width: 80%;
   overflow-y: scroll;
